--- a/style.css
+++ b/style.css
@@ -357,10 +357,7 @@ p {
 	margin-bottom: 10px;
 	text-transform: uppercase;
 }
-#service img {
-	width: 300px;
-	height: 300px;
-}
+
 /* end service section */
 
 /* Projects section */
@@ -467,8 +464,8 @@ p {
 	font-size: 2em;
 }
 #about .col-left .about-img {
-	height: 100%;
-	width: 100%;
+	height: 450px;
+	width: 300px;
 	position: relative;
 	border: 10px solid white;
 }
@@ -769,8 +766,8 @@ p {
 		margin: 0;
 	}
 	#contact .contact-item {
-		width: 30%;
-		margin: 0;
+		width: 40%;
+		margin: 5px;
 		flex-direction: row;
 	}
 	#contact .contact-item .icon {
@@ -783,7 +780,7 @@ p {
 	#contact .contact-item .contact-info {
 		width: 100%;
 		text-align: left;
-		padding-left: 20px;
+		padding-left: 10px;
 	}
 }
 /* End  Media Query For Desktop */
